# aeron-client-cgo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aeron.cpp  aeron.h  aeron_test.cpp  sub.cpp
go/: test_aeron.go
